<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_8dp"
    android:layout_marginTop="@dimen/dimen_8dp"
    android:layout_marginEnd="@dimen/dimen_8dp"
    android:contentDescription="@string/script_presentation_card_cd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title_item_cd"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/script_body_cd"
            android:maxLines="3"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:contentDescription="@string/time_item_cd"
            android:textSize="12sp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>