<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/controls"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_4dp"
        android:background="@android:color/black"
        android:contentDescription="@string/scroll_control_cd">

        <SeekBar
            android:id="@+id/speedSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:contentDescription="@string/scroll_speed_cd"
            android:max="100"
            android:progressBackgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/speedValue"
            app:layout_constraintStart_toEndOf="@id/controlButton"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="@dimen/dimen_32dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:contentDescription="@string/scroll_speed_val_cd"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/controlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:background="@android:color/black"
            android:contentDescription="@string/play_pause_cd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
